--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,3 +128,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ActionRoguelike.ExplosiveBarrel",NewName="/Script/ActionRoguelike.SExplosiveBarrel")
